...
                                <connections>
                                    <outlet property="delegate" destination="cJh-j1-M2W" id="oPN-MW-TPo"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h54-c6-xlu">
                                <rect key="frame" x="8" y="9" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Backward"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="K0g-kN-n0X"/>
                                    <constraint firstAttribute="width" constant="48" id="y0t-rK-MBq"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qQM-kq-QGf">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Dd0-zL-dZK"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" red="0.1041314825" green="0.10708437110000001" blue="0.1332485974" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                <rect key="frame" x="0.0" y="103" width="393" height="4"/>
                                <color key="progressTintColor" name="ypBlack"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="xPj-fi-vuT"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="myWebView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="AsI-ZH-s2J" firstAttribute="leading" secondItem="hdN-nG-7um" secondAttribute="leading" id="3ti-bo-hpV"/>
                            <constraint firstItem="AsI-ZH-s2J" firstAttribute="bottom" secondItem="hdN-nG-7um" secondAttribute="bottom" id="4Zi-f3-DPh"/>
                            <constraint firstItem="oud-EA-AGX" firstAttribute="top" secondItem="xPj-fi-vuT" secondAttribute="top" id="N92-tr-Crh"/>
...
